[tool.poetry]
name = "random_number_agent"
version = "0.1.0"
description = ""
authors = ["Richard Blythman <richardblythman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
naptha-sdk = {git = "https://github.com/Satti-Gowtham/naptha-sdk.git", rev="feature/signing_consumer_id"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
